--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,6 @@ version = "0.1.0"
 description = ""
 authors = ["Joshua Lawrence <jlawrence124@gmail.com>"]
 readme = "README.md"
-packages = [{include = "ds_project"}]
 
 [tool.poetry.dependencies]
 python = "^3.10"
@@ -14,6 +13,7 @@ jupyter-contrib-nbextensions = "^0.7.0"
 rise = "^5.7.1"
 python-dotenv = "^1.0.0"
 transformers = "^4.31.0"
+numpy = "^1.25.2"
 
 
 [tool.poetry.group.dev.dependencies]
