--- a/environment.yml
+++ b/environment.yml
@@ -4,137 +4,248 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - abseil-cpp=20211102.0=h6b3803e_1
+  - abseil-cpp=20211102.0=hc377ac9_0
+  - aiofiles=22.1.0=py311hca03da5_0
   - aiohttp=3.8.3=py311h80987f9_0
-  - aiosignal=1.3.1=pyhd8ed1ab_0
+  - aiosignal=1.2.0=pyhd3eb1b0_0
+  - aiosqlite=0.18.0=py311hca03da5_0
+  - anyio=3.5.0=py311hca03da5_0
+  - appdirs=1.4.4=pyhd3eb1b0_0
+  - appnope=0.1.2=py311hca03da5_1001
+  - argon2-cffi=21.3.0=pyhd3eb1b0_0
+  - argon2-cffi-bindings=21.2.0=py311h80987f9_0
   - arrow-cpp=11.0.0=hc7aafb3_1
-  - async-timeout=4.0.2=pyhd8ed1ab_0
-  - attrs=23.1.0=pyh71513ae_1
+  - asttokens=2.0.5=pyhd3eb1b0_0
+  - async-timeout=4.0.2=py311hca03da5_0
+  - attrs=22.1.0=py311hca03da5_0
   - aws-c-common=0.6.8=h80987f9_1
   - aws-c-event-stream=0.1.6=h313beb8_6
   - aws-checksums=0.1.11=h80987f9_2
   - aws-sdk-cpp=1.8.185=ha71a6ea_1
+  - babel=2.11.0=py311hca03da5_0
+  - backcall=0.2.0=pyhd3eb1b0_0
+  - beautifulsoup4=4.12.2=py311hca03da5_0
   - blas=1.0=openblas
+  - bleach=4.1.0=pyhd3eb1b0_0
   - boost-cpp=1.73.0=h1a28f6b_12
   - bottleneck=1.3.5=py311ha0d4635_0
-  - brotli=1.0.9=h1a8c8d9_9
-  - brotli-bin=1.0.9=h1a8c8d9_9
+  - brotli=1.0.9=h1a28f6b_7
+  - brotli-bin=1.0.9=h1a28f6b_7
   - brotlipy=0.7.0=py311h80987f9_1002
   - bzip2=1.0.8=h620ffc9_4
-  - c-ares=1.19.1=hb547adb_0
+  - c-ares=1.19.0=h80987f9_0
   - ca-certificates=2023.7.22=hf0a4a13_0
   - certifi=2023.7.22=pyhd8ed1ab_0
   - cffi=1.15.1=py311h80987f9_3
   - charset-normalizer=2.0.4=pyhd3eb1b0_0
   - click=8.0.4=py311hca03da5_0
-  - colorama=0.4.6=pyhd8ed1ab_0
+  - comm=0.1.2=py311hca03da5_0
   - cryptography=41.0.2=py311h6204c90_0
-  - dataclasses=0.8=pyhc8e2a94_3
-  - datasets=2.14.3=pyhd8ed1ab_0
-  - dill=0.3.7=pyhd8ed1ab_0
+  - datasets=2.12.0=py311hca03da5_0
+  - debugpy=1.6.7=py311h313beb8_0
+  - decorator=5.1.1=pyhd3eb1b0_0
+  - defusedxml=0.7.1=pyhd3eb1b0_0
+  - dill=0.3.6=py311hca03da5_0
+  - entrypoints=0.4=py311hca03da5_0
+  - executing=0.8.3=pyhd3eb1b0_0
   - filelock=3.9.0=py311hca03da5_0
   - freetype=2.12.1=h1192e45_0
   - frozenlist=1.3.3=py311h80987f9_0
-  - fsspec=2023.6.0=pyh1a96a4e_0
-  - gflags=2.2.2=hc88da5d_1004
+  - fsspec=2023.4.0=py311hca03da5_0
+  - gettext=0.21.0=h13f89a0_1
+  - gflags=2.2.2=hc377ac9_0
   - giflib=5.2.1=h80987f9_3
-  - glog=0.5.0=h5c6a83d_0
+  - glib=2.69.1=h514c7bf_2
+  - glog=0.5.0=hc377ac9_0
   - gmp=6.2.1=hc377ac9_3
   - gmpy2=2.1.2=py311h40f64dc_0
   - grpc-cpp=1.48.2=hc60591f_1
-  - huggingface_hub=0.16.4=pyhd8ed1ab_0
-  - icu=68.2=hbdafb3b_0
+  - gst-plugins-base=1.14.1=h313beb8_1
+  - gstreamer=1.14.1=h80987f9_1
+  - huggingface_hub=0.15.1=py311hca03da5_0
+  - icu=68.1=hc377ac9_0
   - idna=3.4=py311hca03da5_0
-  - importlib-metadata=6.8.0=pyha770c72_0
-  - importlib_metadata=6.8.0=hd8ed1ab_0
-  - joblib=1.3.0=pyhd8ed1ab_1
+  - ipykernel=6.25.0=py311hb6e6a13_0
+  - ipython=8.12.0=py311hca03da5_0
+  - ipython_genutils=0.2.0=pyhd3eb1b0_1
+  - ipywidgets=8.0.4=py311hca03da5_0
+  - jedi=0.18.1=py311hca03da5_1
+  - jinja2=3.1.2=py311hca03da5_0
+  - joblib=1.2.0=py311hca03da5_0
   - jpeg=9e=h80987f9_1
-  - krb5=1.20.1=h69eda48_0
+  - json5=0.9.6=pyhd3eb1b0_0
+  - jsonschema=4.17.3=py311hca03da5_0
+  - jupyter=1.0.0=py311hca03da5_8
+  - jupyter_client=7.4.9=py311hca03da5_0
+  - jupyter_console=6.6.3=py311hca03da5_0
+  - jupyter_core=5.3.0=py311hca03da5_0
+  - jupyter_events=0.6.3=py311hca03da5_0
+  - jupyter_server=1.23.4=py311hca03da5_0
+  - jupyter_server_fileid=0.9.0=py311hca03da5_0
+  - jupyter_server_ydoc=0.8.0=py311hca03da5_1
+  - jupyter_ydoc=0.2.4=py311hca03da5_0
+  - jupyterlab=3.6.3=py311hca03da5_0
+  - jupyterlab_pygments=0.1.2=py_0
+  - jupyterlab_server=2.22.0=py311hca03da5_0
+  - jupyterlab_widgets=3.0.5=py311hca03da5_0
+  - krb5=1.20.1=hf3e1bf2_1
   - lcms2=2.12=hba8e193_0
   - lerc=3.0=hc377ac9_0
   - libboost=1.73.0=h49e8a49_12
-  - libbrotlicommon=1.0.9=h1a8c8d9_9
-  - libbrotlidec=1.0.9=h1a8c8d9_9
-  - libbrotlienc=1.0.9=h1a8c8d9_9
+  - libbrotlicommon=1.0.9=h1a28f6b_7
+  - libbrotlidec=1.0.9=h1a28f6b_7
+  - libbrotlienc=1.0.9=h1a28f6b_7
+  - libclang=12.0.0=default_hc321e17_4
   - libcurl=8.1.1=h3e2b118_2
   - libcxx=14.0.6=h848a8c0_0
   - libdeflate=1.17=h80987f9_0
-  - libedit=3.1.20191231=hc8eb9b7_2
-  - libev=4.33=h642e427_1
-  - libevent=2.1.12=h2757513_1
+  - libedit=3.1.20221030=h80987f9_0
+  - libev=4.33=h1a28f6b_1
+  - libevent=2.1.12=h02f6b3c_1
+  - libexpat=2.5.0=hb7217d7_1
   - libffi=3.4.4=hca03da5_0
   - libgfortran=5.0.0=11_3_0_hca03da5_28
   - libgfortran5=11.3.0=h009349e_28
-  - libiconv=1.17=he4db4b2_0
+  - libiconv=1.16=h1a28f6b_2
+  - libllvm12=12.0.0=h12f7ac0_4
   - libnghttp2=1.52.0=h62f6fdd_1
   - libopenblas=0.3.21=h269037a_0
   - libpng=1.6.39=h80987f9_0
+  - libpq=12.15=h02f6b3c_1
   - libprotobuf=3.20.3=h514c7bf_0
+  - libsodium=1.0.18=h1a28f6b_0
+  - libsqlite=3.42.0=hb31c410_0
   - libssh2=1.10.0=h02f6b3c_2
   - libthrift=0.15.0=h73c2103_2
   - libtiff=4.5.0=h313beb8_2
   - libwebp=1.2.4=ha3663a8_1
   - libwebp-base=1.2.4=h80987f9_1
+  - libxml2=2.10.3=h372ba2a_0
+  - libxslt=1.1.37=habca612_0
+  - libzlib=1.2.13=h53f4e23_5
   - llvm-openmp=14.0.6=hc6e5704_0
+  - lxml=4.9.2=py311h80987f9_0
   - lz4-c=1.9.4=h313beb8_0
+  - matplotlib-inline=0.1.6=py311hca03da5_0
+  - mistune=0.8.4=py311h80987f9_1000
   - mpc=1.1.0=h8c48613_1
   - mpfr=4.0.2=h695f6f0_1
   - mpmath=1.3.0=py311hca03da5_0
   - multidict=6.0.2=py311h80987f9_0
   - multiprocess=0.70.14=py311hca03da5_0
+  - nbclassic=0.5.5=py311hca03da5_0
+  - nbclient=0.5.13=py311hca03da5_0
+  - nbconvert=6.5.4=py311hca03da5_0
+  - nbformat=5.7.0=py311hca03da5_0
   - ncurses=6.4=h313beb8_0
+  - nest-asyncio=1.5.6=py311hca03da5_0
   - networkx=3.1=py311hca03da5_0
+  - ninja=1.10.2=hca03da5_5
+  - ninja-base=1.10.2=h525c30c_5
+  - nltk=3.8.1=py311hca03da5_0
+  - nltk_data=2019.07.04=0
+  - notebook=6.5.4=py311hca03da5_1
+  - notebook-shim=0.2.2=py311hca03da5_0
+  - nspr=4.35=h313beb8_0
+  - nss=3.89.1=h313beb8_0
   - numexpr=2.8.4=py311h6dc990b_1
   - numpy=1.25.0=py311he598dae_0
   - numpy-base=1.25.0=py311hfbfe69c_0
   - openssl=3.1.2=h53f4e23_0
   - orc=1.7.4=hdca1487_1
-  - packaging=23.1=pyhd8ed1ab_0
+  - packaging=23.0=py311hca03da5_0
   - pandas=1.5.3=py311h6956b77_0
+  - pandocfilters=1.5.0=pyhd3eb1b0_0
+  - parso=0.8.3=pyhd3eb1b0_0
+  - pcre=8.45=hc377ac9_0
+  - pexpect=4.8.0=pyhd3eb1b0_3
+  - pickleshare=0.7.5=pyhd3eb1b0_1003
   - pillow=9.4.0=py311h313beb8_0
   - pip=23.2.1=py311hca03da5_0
+  - platformdirs=2.5.2=py311hca03da5_0
+  - ply=3.11=py311hca03da5_0
+  - pooch=1.4.0=pyhd3eb1b0_0
+  - prometheus_client=0.14.1=py311hca03da5_0
+  - prompt-toolkit=3.0.36=py311hca03da5_0
+  - prompt_toolkit=3.0.36=hd3eb1b0_0
+  - psutil=5.9.0=py311h80987f9_0
+  - ptyprocess=0.7.0=pyhd3eb1b0_2
+  - pure_eval=0.2.2=pyhd3eb1b0_0
   - pyarrow=11.0.0=py311h7575258_0
   - pycparser=2.21=pyhd3eb1b0_0
+  - pygments=2.15.1=py311hca03da5_1
   - pyopenssl=23.2.0=py311hca03da5_0
+  - pyqt=5.15.7=py311h313beb8_0
+  - pyqt5-sip=12.11.0=py311h313beb8_0
+  - pyrsistent=0.18.0=py311h80987f9_0
   - pysocks=1.7.1=py311hca03da5_0
-  - python=3.11.4=hb885b13_0
+  - python=3.11.4=h47c9636_0_cpython
   - python-dateutil=2.8.2=pyhd3eb1b0_0
-  - python-dotenv=1.0.0=pyhd8ed1ab_0
+  - python-dotenv=0.21.0=py311hca03da5_0
+  - python-fastjsonschema=2.16.2=py311hca03da5_0
+  - python-json-logger=2.0.7=py311hca03da5_0
   - python-xxhash=2.0.2=py311h80987f9_1
+  - python_abi=3.11=3_cp311
   - pytorch=2.1.0.dev20230803=py3.11_0
   - pytz=2022.7=py311hca03da5_0
   - pyyaml=6.0=py311h80987f9_1
-  - re2=2022.04.01=h6b3803e_0
+  - pyzmq=23.2.0=py311h313beb8_0
+  - qt-main=5.15.2=ha2d02b5_7
+  - qt-webengine=5.15.9=h2903aaf_4
+  - qtconsole=5.4.2=py311hca03da5_0
+  - qtpy=2.2.0=py311hca03da5_0
+  - qtwebkit=5.212=h19f419d_5
+  - re2=2022.04.01=hc377ac9_0
   - readline=8.2=h1a28f6b_0
   - regex=2022.7.9=py311h80987f9_0
   - requests=2.31.0=py311hca03da5_0
-  - sacremoses=0.0.53=pyhd8ed1ab_0
+  - responses=0.13.3=pyhd3eb1b0_0
+  - rfc3339-validator=0.1.4=py311hca03da5_0
+  - rfc3986-validator=0.1.1=py311hca03da5_0
+  - rise=5.7.1=py311h267d04e_2
+  - sacremoses=0.0.43=pyhd3eb1b0_0
+  - scipy=1.10.1=py311hc76d9b0_1
+  - send2trash=1.8.0=pyhd3eb1b0_1
   - setuptools=68.0.0=py311hca03da5_0
+  - sip=6.6.2=py311h313beb8_0
   - six=1.16.0=pyhd3eb1b0_1
-  - snappy=1.1.10=h17c5cce_0
+  - snappy=1.1.9=hc377ac9_0
+  - sniffio=1.2.0=py311hca03da5_1
+  - soupsieve=2.4=py311hca03da5_0
   - sqlite=3.41.2=h80987f9_0
+  - stack_data=0.2.0=pyhd3eb1b0_0
   - sympy=1.11.1=py311hca03da5_0
+  - terminado=0.17.1=py311hca03da5_0
+  - tinycss2=1.2.1=py311hca03da5_0
   - tk=8.6.12=hb8d0fd4_0
   - tokenizers=0.13.2=py311h3dd52b7_1
+  - toml=0.10.2=pyhd3eb1b0_0
   - torchaudio=2.1.0.dev20230803=py311_cpu
   - torchvision=0.15.2=cpu_py311he74fb5d_0
-  - tqdm=4.65.0=pyhd8ed1ab_1
-  - transformers=4.28.1=pyhd8ed1ab_0
+  - tornado=6.3.2=py311h80987f9_0
+  - tqdm=4.65.0=py311hb6e6a13_0
+  - traitlets=5.7.1=py311hca03da5_0
+  - transformers=4.29.2=py311hca03da5_0
   - typing-extensions=4.7.1=py311hca03da5_0
   - typing_extensions=4.7.1=py311hca03da5_0
   - tzdata=2023c=h04d1e81_0
   - urllib3=1.26.16=py311hca03da5_0
   - utf8proc=2.6.1=h1a28f6b_0
+  - wcwidth=0.2.5=pyhd3eb1b0_0
+  - webencodings=0.5.1=py311hca03da5_1
+  - websocket-client=0.58.0=py311hca03da5_4
   - wheel=0.38.4=py311hca03da5_0
-  - xxhash=0.8.0=h27ca646_3
+  - widgetsnbextension=4.0.5=py311hca03da5_0
+  - xxhash=0.8.0=h1a28f6b_3
   - xz=5.4.2=h80987f9_0
+  - y-py=0.5.9=py311ha6e5c4f_0
   - yaml=0.2.5=h1a28f6b_0
   - yarl=1.8.1=py311h80987f9_0
-  - zipp=3.16.2=pyhd8ed1ab_0
-  - zlib=1.2.13=h5a0b063_0
+  - ypy-websocket=0.8.2=py311hca03da5_0
+  - zeromq=4.3.4=hc377ac9_0
+  - zlib=1.2.13=h53f4e23_5
   - zstd=1.5.5=hd90d995_0
   - pip:
-      - jinja2==3.1.2
       - markupsafe==2.1.3
       - mypy-extensions==1.0.0
       - pyre-extensions==0.0.29
