--- a/environment.yml
+++ b/environment.yml
@@ -40,7 +40,9 @@ dependencies:
   - charset-normalizer=2.0.4=pyhd3eb1b0_0
   - click=8.0.4=py311hca03da5_0
   - comm=0.1.2=py311hca03da5_0
+  - contourpy=1.0.5=py311h48ca7d4_0
   - cryptography=41.0.2=py311h6204c90_0
+  - cycler=0.11.0=pyhd3eb1b0_0
   - datasets=2.12.0=py311hca03da5_0
   - debugpy=1.6.7=py311h313beb8_0
   - decorator=5.1.1=pyhd3eb1b0_0
@@ -49,6 +51,7 @@ dependencies:
   - entrypoints=0.4=py311hca03da5_0
   - executing=0.8.3=pyhd3eb1b0_0
   - filelock=3.9.0=py311hca03da5_0
+  - fonttools=4.25.0=pyhd3eb1b0_0
   - freetype=2.12.1=h1192e45_0
   - frozenlist=1.3.3=py311h80987f9_0
   - fsspec=2023.4.0=py311hca03da5_0
@@ -88,6 +91,7 @@ dependencies:
   - jupyterlab_pygments=0.1.2=py_0
   - jupyterlab_server=2.22.0=py311hca03da5_0
   - jupyterlab_widgets=3.0.5=py311hca03da5_0
+  - kiwisolver=1.4.4=py311h313beb8_0
   - krb5=1.20.1=hf3e1bf2_1
   - lcms2=2.12=hba8e193_0
   - lerc=3.0=hc377ac9_0
@@ -126,6 +130,8 @@ dependencies:
   - llvm-openmp=14.0.6=hc6e5704_0
   - lxml=4.9.2=py311h80987f9_0
   - lz4-c=1.9.4=h313beb8_0
+  - matplotlib=3.7.1=py311hca03da5_1
+  - matplotlib-base=3.7.1=py311h7aedaa7_1
   - matplotlib-inline=0.1.6=py311hca03da5_0
   - mistune=0.8.4=py311h80987f9_1000
   - mpc=1.1.0=h8c48613_1
@@ -133,6 +139,7 @@ dependencies:
   - mpmath=1.3.0=py311hca03da5_0
   - multidict=6.0.2=py311h80987f9_0
   - multiprocess=0.70.14=py311hca03da5_0
+  - munkres=1.1.4=py_0
   - nbclassic=0.5.5=py311hca03da5_0
   - nbclient=0.5.13=py311hca03da5_0
   - nbconvert=6.5.4=py311hca03da5_0
@@ -143,7 +150,6 @@ dependencies:
   - ninja=1.10.2=hca03da5_5
   - ninja-base=1.10.2=h525c30c_5
   - nltk=3.8.1=py311hca03da5_0
-  - nltk_data=2019.07.04=0
   - notebook=6.5.4=py311hca03da5_1
   - notebook-shim=0.2.2=py311hca03da5_0
   - nspr=4.35=h313beb8_0
@@ -175,6 +181,7 @@ dependencies:
   - pycparser=2.21=pyhd3eb1b0_0
   - pygments=2.15.1=py311hca03da5_1
   - pyopenssl=23.2.0=py311hca03da5_0
+  - pyparsing=3.0.9=py311hca03da5_0
   - pyqt=5.15.7=py311h313beb8_0
   - pyqt5-sip=12.11.0=py311h313beb8_0
   - pyrsistent=0.18.0=py311h80987f9_0
@@ -246,9 +253,13 @@ dependencies:
   - zlib=1.2.13=h53f4e23_5
   - zstd=1.5.5=hd90d995_0
   - pip:
+      - anyascii==0.3.2
+      - contractions==0.1.73
       - markupsafe==2.1.3
       - mypy-extensions==1.0.0
+      - pyahocorasick==2.0.0
       - pyre-extensions==0.0.29
+      - textsearch==0.0.24
       - typing-inspect==0.9.0
       - xformers==0.0.20
 prefix: /Users/joshualawrence/anaconda3/envs/ds_project
